[package]
name = "predictify-hybrid"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
alloc = { version = "1.0", optional = true }

[features]
default = ["alloc"]

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
